# wren

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  cliff.toml  crd.rs  gang.rs  kind-config.yaml  main.rs  tarpaulin.toml
.cargo/: audit.toml
.github/workflows/: auto-release.yml  build.yml  ci.yaml  docs.yml  integration.yml  manual-release.yml  release.yml  test.yml
charts/bubo/: Chart.yaml  values.yaml
charts/bubo/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
charts/bubo/templates/crds/: bubojob.yaml  buboqueue.yaml  mpijob.yaml
charts/wren/: Chart.yaml  values.yaml
charts/wren/charts/: reaper-0.2.11.tgz  reaper-0.2.27.tgz
charts/wren/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
charts/wren/templates/crds/: wrenjob.yaml  wrenqueue.yaml  wrenuser.yaml
crates/bubo-cli/: Cargo.toml
crates/bubo-cli/src/: cancel.rs  logs.rs  main.rs  queue.rs  status.rs  submit.rs
crates/bubo-controller/: Cargo.toml
crates/bubo-controller/src/: container.rs  leader_election.rs  main.rs  metrics.rs  mpi.rs  node_watcher.rs  reaper.rs  reconciler.rs  reservation.rs  webhook.rs
crates/bubo-controller/tests/: integration.rs
crates/bubo-core/: Cargo.toml
crates/bubo-core/src/: backend.rs  crd.rs  error.rs  lib.rs  types.rs
crates/bubo-scheduler/: Cargo.toml
crates/bubo-scheduler/src/: backfill.rs  dependencies.rs  fair_share.rs  gang.rs  lib.rs  queue.rs  queue_manager.rs  resources.rs  topology.rs
crates/wren-cli/: Cargo.toml
crates/wren-cli/src/: cancel.rs  logs.rs  main.rs  queue.rs  status.rs  submit.rs
crates/wren-controller/: Cargo.toml
crates/wren-controller/src/: container.rs  job_id.rs  leader_election.rs  main.rs  metrics.rs  mpi.rs  node_watcher.rs  reaper.rs  reconciler.rs  reservation.rs  user_identity.rs  webhook.rs
crates/wren-controller/tests/: integration.rs
crates/wren-core/: Cargo.toml
crates/wren-core/src/: backend.rs  crd.rs  error.rs  lib.rs  types.rs
crates/wren-scheduler/: Cargo.toml
crates/wren-scheduler/src/: backfill.rs  dependencies.rs  fair_share.rs  gang.rs  lib.rs  queue.rs  queue_manager.rs  resources.rs  topology.rs
docker/: Dockerfile.controller
docs/: TODO.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  introduction.md
docs/book/src/development/: contributing.md  releasing.md  testing.md
docs/book/src/getting-started/: cluster-setup.md  installation.md  quick-start.md
docs/book/src/operator-guide/: architecture.md  configuration.md  helm-chart.md  monitoring.md  reaper-integration.md  troubleshooting.md
docs/book/src/reference/: crds.md  environment-variables.md  labels-annotations.md
docs/book/src/user-guide/: cli.md  job-dependencies.md  mpi-jobs.md  queues-and-priority.md  submitting-jobs.md  topology.md  user-identity.md
examples/: quickstart.sh
examples/01-hello-world/: job.yaml
examples/02-multi-node/: job.yaml
examples/03-queues/: job.yaml  queue.yaml
examples/04-topology/: job.yaml
examples/05-priority/: high-priority.yaml  low-priority.yaml
examples/06-dependencies/: pipeline.yaml
examples/07-reaper-backend/: job.yaml  mpi-job.yaml  user.yaml
examples/08-distributed-training/: README.md  configmap.yaml  job.yaml  setup.sh  user.yaml
examples/common/: user.yaml
manifests/: deployment.yaml
manifests/crds/: bubojob.yaml  buboqueue.yaml  mpijob.yaml  wrenjob.yaml  wrenqueue.yaml  wrenuser.yaml
manifests/examples/: gpu-training.yaml  reaper-job.yaml  simple-mpi.yaml  wrenuser.yaml
manifests/rbac/: rbac.yaml
scripts/: check-crd-sync.sh  pre-push  run-integration-tests.sh  test-examples.sh
