[workspace]
resolver = "2"
members = [
    "crates/wren-core",
    "crates/wren-scheduler",
    "crates/wren-controller",
    "crates/wren-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/miguelgila/wren"

[workspace.dependencies]
# Kubernetes
kube = { version = "0.98", default-features = false, features = ["runtime", "derive", "client", "rustls-tls"] }
kube-runtime = "0.98"
k8s-openapi = { version = "0.24", features = ["latest"] }
schemars = "0.8"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging & metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"

# CLI
clap = { version = "4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP (for metrics endpoint and Reaper communication)
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Identity / UUID
uuid = { version = "1", features = ["v4"] }
hostname = "0.4"
