[package]
name = "bubo-controller"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "bubo-controller"
path = "src/main.rs"

[[test]]
name = "integration"
path = "tests/integration.rs"

[dependencies]
bubo-core = { path = "../bubo-core" }
bubo-scheduler = { path = "../bubo-scheduler" }
kube = { workspace = true }
kube-runtime = { workspace = true }
k8s-openapi = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
hostname = { workspace = true }
