[package]
name = "wren-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "wren"
path = "src/main.rs"

[dependencies]
wren-core = { path = "../wren-core" }
kube = { workspace = true }
k8s-openapi = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
