[package]
name = "wren-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kube = { workspace = true }
k8s-openapi = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[[bin]]
name = "crd-gen"
path = "src/bin/crd_gen.rs"

[dev-dependencies]
tokio = { workspace = true }
